# taptalk-keyboard

./: .gitignore  CMakeLists.txt  NOTICE  README.md  partitions.csv  sdkconfig.defaults
.claude/: launch.json
.github/workflows/: deploy-pages.yml
components/core/: CMakeLists.txt  dnsreply.c  formdec.c  jsonesc.c  keymap.c  keymap_abnt2.c  keymap_de.c  keymap_es.c  keymap_esla.c  keymap_fr.c  keymap_it.c  keymap_pt.c  keymap_uk.c  keymap_us.c  keymap_usintl.c  multipart.c  sm.c  textnorm.c  typeplan.c  wav.c
components/core/include/core/: dnsreply.h  formdec.h  hid_codes.h  jsonesc.h  keymap.h  multipart.h  sm.h  textnorm.h  typeplan.h  wav.h
docs/: custom-endpoints.md  hardware-v1.md  security.md  streaming-transcription.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_sm.c  app_sm.h  audio_capture.c  audio_capture.h  beeper.c  beeper.h  config_store.c  config_store.h  diagnostics.c  diagnostics.h  hid_kbd.c  hid_kbd.h  idf_component.yml  net_wifi.c  net_wifi.h  pmic.c  pmic.h  provisioning.c  provisioning.h  secrets.example.h  stt_client.c  stt_client.h  ui.c  ui.h
main/assets/: bg_main.c  bg_main.h  btn_mic.c  btn_mic.h  ic_halo.c  ic_halo.h  ic_mic.c  ic_mic.h
test/host/: Makefile  gen_fixtures.c  interop.py  test_dnsreply.c  test_formdec.c  test_jsonesc.c  test_keymap.c  test_multipart.c  test_sm.c  test_textnorm.c  test_typeplan.c  test_util.h  test_wav.c
tools/: bake_bg.py  bake_button.py  bake_halo.py  bake_mic.py  flash.sh  gen_keymap.py  idf.sh  preview_portal.py  release.sh
web/: index.html  manifest.json
