idf_component_register(
    SRCS
        "app_main.c"
        "app_sm.c"
        "config_store.c"
        "provisioning.c"
        "pmic.c"
        "ui.c"
        "assets/bg_main.c"
        "assets/btn_mic.c"
        "assets/ic_mic.c"
        "assets/ic_halo.c"
        "audio_capture.c"
        "beeper.c"
        "diagnostics.c"
        "net_wifi.c"
        "stt_client.c"
        "hid_kbd.c"
    INCLUDE_DIRS "."
    REQUIRES
        core
        esp_wifi
        esp_netif
        esp_http_server
        esp_http_client
        esp_app_format
        nvs_flash
        esp-tls
        esp_timer
        lwip
        driver
        esp_lcd_touch
)
